# socketdb

./: .gitignore  Cargo.toml  README.md
src/: database.rs  error.rs  evaluator.rs  lib.rs  main.rs  metacommands.rs  table.rs
src/parser/: expression.rs  mod.rs  parser.rs  select.rs
