[package]
name = "socketdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
anyhow = "1.0.75"
bimap = { version = "0.6.3", features = ["serde"] }
bincode = "1.3.3"
env_logger = "0.10.1"
flume = "0.11.0"
log = "0.4.20"
prettytable-rs = "0.10.0"
rustyline = "13.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlparser = "0.40.0"
thiserror = "1.0.51"
